<resources>
    <string name="app_name">BeeOrgnize</string>
    <string name="adolfo">Adolfo</string>
    <string name="febaruari_2">15 Febaruari 2022</string>
    <string name="task_schedu">TASK\nSCHEDULE</string>
    <string name="task_remind">TASK\nREMINDER</string>
    <string name="note">NOTE</string>
    <string name="kelas">CLASS</string>
    <string name="meeting_room">MEETING\nROOM</string>
    <string name="contact">CONTACT</string>
    <string name="this_is_wha">THIS IS WHAT YOU HAVE HERE :</string>
    <string name="find_your_c">Find your class, note, schedule, contact, etc</string>

</resources>