<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#5E8DAF">

    <TextView
        android:id="@+id/adolfo"
        android:layout_width="124dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:text="@string/adolfo"
        android:textColor="@color/tulisan2"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/febaruari_2"
        android:layout_width="207dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/roboto"
        android:gravity="top"
        android:text="@string/febaruari_2"
        android:textColor="@color/tulisan2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profil"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/profil"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <View
        android:id="@+id/pencarian"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/pencarian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/backround_m"
        android:layout_width="414dp"
        android:layout_height="729dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="180dp"
        android:background="@drawable/backround_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/menu_1"
        android:layout_width="370dp"
        android:layout_height="403dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/menu_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backround_m" />

    <View
        android:id="@+id/menu_"
        android:layout_width="370dp"
        android:layout_height="216dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/menu_1"
        app:layout_constraintBottom_toBottomOf="@+id/bg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/bg_button"
        android:layout_width="414dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_button"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="804dp" />

    <ImageButton
        android:id="@+id/icon_calend"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/icon_calender"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="243dp" />

    <ImageButton
        android:id="@+id/icon_remind"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/icon_reminder"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="243dp" />

    <ImageButton
        android:id="@+id/icon_note"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/icon_note"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="243dp" />

    <ImageButton
        android:id="@+id/icon_class"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/icon_class"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="441dp" />

    <ImageButton
        android:id="@+id/icon_meet"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/icon_meet"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="441dp" />

    <ImageButton
        android:id="@+id/icon_contac"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/icon_contact"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="441dp" />

    <TextView
        android:id="@+id/task_schedu"
        android:layout_width="92dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:text="@string/task_schedu"
        android:textColor="#95A5B7"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/task_remind"
        android:layout_width="81dp"
        android:layout_height="37dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:text="@string/task_remind"
        android:textColor="@color/tulisan1"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/note"
        android:layout_width="64dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:text="@string/note"
        android:textColor="@color/tulisan1"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/kelas"
        android:layout_width="64dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:text="@string/kelas"
        android:textColor="@color/tulisan1"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="545dp" />

    <TextView
        android:id="@+id/meeting_r"
        android:layout_width="63dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:text="@string/meeting_room"
        android:textColor="@color/tulisan1"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="545dp" />

    <TextView
        android:id="@+id/contact_id"
        android:layout_width="64dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:text="@string/contact"
        android:textColor="@color/tulisan1"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="545dp" />

    <TextView
        android:id="@+id/this_is_wha"
        android:layout_width="217dp"
        android:layout_height="22dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:gravity="top"
        android:text="@string/this_is_wha"
        android:textColor="@color/tulisan1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu_" />

    <RelativeLayout
        android:id="@+id/document"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/document"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu_" />

    <RelativeLayout
        android:id="@+id/link"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/link"
        android:clipToOutline="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu_" />

    <RelativeLayout
        android:id="@+id/calendar"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="180dp"
        android:background="@drawable/calendar"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu_" />

    <RelativeLayout
        android:id="@+id/note"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="112dp"
        android:background="@drawable/note"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu_" />

    <RelativeLayout
        android:id="@+id/contact_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/contact"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menu_" />

    <RelativeLayout
        android:id="@+id/add_button"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/add_button"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/reminder"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/reminder"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bg_button" />

    <RelativeLayout
        android:id="@+id/note_1"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/note_1"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/search"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/find_your_c"
        android:layout_width="303dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="top"
        android:text="@string/find_your_c"
        android:textColor="#80FFFFFF"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="130dp" />

</androidx.constraintlayout.widget.ConstraintLayout>